[package]
name = "rsrun"
version = "0.1.0"
edition = "2018"
authors = ["Thomas Prokosch <thomas.prokosch@ifi.lmu.de>"]

[dependencies]
bincode = "1.3"
dns-lookup = "1.0"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }

[dependencies.tokio]
version = "0.3"
features = ["io-util", "process", "net", "rt-multi-thread"]
